resources/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: ""
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx 
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
          items:
            - key: nginx.conf
              path: nginx.conf
