resources/zoonavigator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zoonavigator
  name: zoonavigator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zoonavigator
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: zoonavigator
    spec:
      containers:
      - env:
        - name: AUTO_CONNECT_CONNECTION_ID
          value: MYZK
        - name: CONNECTION_MYZK_CONN
          value: zookeeper:2181
        image: elkozmon/zoonavigator
        imagePullPolicy: ""
        name: zoonavigator
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
