resources/store.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: store
spec:
  replicas: 20
  # minReadySeconds: 30
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: store
  serviceName: store-service
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
        - image: docker.io/andrew-delph/main:store_image
          # imagePullPolicy: "Always"
          imagePullPolicy: Never
          name: store
          resources:
            limits:
              cpu: "500m"
          volumeMounts:
            - name: store-data-volume
              mountPath: /data/
          # startupProbe:
          #   httpGet:
          #     path: /
          #     port: 8080
          #   periodSeconds: 4
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
      restartPolicy: Always
      serviceAccountName: ""
  volumeClaimTemplates:
    - metadata:
        name: store-data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: store
spec:
  selector:
    app: store
  clusterIP: None
  ports:
    - name: external-http
      port: 8080
      targetPort: 8080
    - name: internal-grpc
      port: 7070
      targetPort: 7070
    - name: memberlist
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: store-external
spec:
  selector:
    app: store
  # type: NodePort
  ports:
    - name: external-http
      port: 8080
      targetPort: 8080
      # nodePort: 30001
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: store-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: StatefulSet
#     name: store
#   minReplicas: 10
#   maxReplicas: 30
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 40
